# cen310-openmp-tutorial-demos

./: README.md
00-basic-command-line/: README.md  openmp_parallel_demo.cpp
00-basic-command-line/assets/: openmp_parallel_region.puml
01-basic-parallel/: CMakeLists.txt  PROMPT.md  README.md  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
01-basic-parallel/assets/: openmp_basic_concepts.puml
01-basic-parallel/src/: main.cpp
02-parallel-for-loops/: CMakeLists.txt  PROMPT.md  README.md  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
02-parallel-for-loops/assets/: parallel_for_loop.puml
02-parallel-for-loops/src/: main.cpp
03-scheduling-strategies/: CMakeLists.txt  PROMPT.md  README.md  SCHEDULING.md  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
03-scheduling-strategies/assets/: scheduling_strategies.puml
03-scheduling-strategies/src/: main.cpp
04-data-sharing/: CMakeLists.txt  DATA_SHARING_GUIDE.md  PROMPT.md  README.md  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
04-data-sharing/assets/: openmp_data_sharing.puml
04-data-sharing/src/: main.cpp
05-reduction-operations/: CMakeLists.txt  PROMPT.md  README.md  REDUCTION_GUIDE.md  benchmark_results.txt  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
05-reduction-operations/assets/: openmp_reduction.puml
05-reduction-operations/src/: main.cpp
06-synchronization/: CMakeLists.txt  PROMPT.md  README.md  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
06-synchronization/assets/: openmp_synchronization.puml
06-synchronization/docs/: SYNCHRONIZATION_GUIDE.md
06-synchronization/include/: synchronization_demos.h  utils.h
06-synchronization/src/: atomic_operations.cpp  barriers.cpp  critical_sections.cpp  flush.cpp  lock_contention.cpp  locks.cpp  main.cpp  master_single.cpp  memory_consistency.cpp  ordered.cpp  performance.cpp  race_conditions.cpp  thread_timeline.cpp  utils.cpp
07-task-parallelism/: CMakeLists.txt  PROMPT.md  README.md  build_all.bat  check_vs2022.bat  clean.bat  configure.bat  generate_reports.bat  run.bat  run_all.bat  run_benchmarks.bat  run_examples.bat  setup_environment.bat
07-task-parallelism/assets/: openmp_tasks.puml
07-task-parallelism/benchmarks/: benchmark_suite.cpp
07-task-parallelism/docs/: PERFORMANCE_TUNING.md  TASK_PARALLELISM_GUIDE.md
07-task-parallelism/examples/: basic_tasks.cpp  fibonacci.cpp  graph_processing.cpp  heterogeneous_tasks.cpp  nested_tasks.cpp  quicksort.cpp  task_dependencies.cpp  task_priority.cpp  task_stealing.cpp  task_throttling.cpp  task_visualizer.cpp  taskgroup.cpp  taskloop.cpp  tree_traversal.cpp
07-task-parallelism/include/: task_utils.h
07-task-parallelism/src/: main.cpp
08-nested-affinity/: CMakeLists.txt  PROMPT.md  README.md  build_all.bat  clean.bat  configure.bat  run.bat  run_all.bat
08-nested-affinity/assets/: nested_parallelism.puml
08-nested-affinity/include/: cli_parser.h  system_topology.h  thread_utils.h
08-nested-affinity/scripts/: check_prerequisites.bat  set_affinity_tests.bat
08-nested-affinity/src/: main.cpp  matrix_multiplication.cpp
08-nested-affinity/system/: system_topology.cpp
08-nested-affinity/utils/: cli_parser.cpp  thread_utils.cpp
09-simd-vectorization/: CMakeLists.txt  PROMPT.md  README.md  build.bat  build_all.bat  check_prerequisites.bat  clean.bat  clean_and_rebuild.bat  clean_thorough.ps1  configure.bat  generate_asm_report.bat  generate_performance_report.bat  run.bat  run_all.bat  setup_environment.bat
09-simd-vectorization/assets/: simd_vectorization.puml
09-simd-vectorization/benchmarks/: performance_report.txt
09-simd-vectorization/docs/: ASSEMBLY_ANALYSIS_GUIDE.md  SIMD_VECTORIZATION_GUIDE.md
09-simd-vectorization/include/: asm_analyzer.h  benchmark_suite.h  cpu_features.h  simd_examples.h  simd_verifier.h
09-simd-vectorization/src/: array_operations.cpp  asm_analyzer.cpp  basic_simd.cpp  benchmark_suite.cpp  complex_math.cpp  cpu_features.cpp  main.cpp  mixed_precision.cpp  simd_alignment.cpp  simd_parallelism.cpp  simd_verifier.cpp  simd_width.cpp
10-debugging-performance/: CMakeLists.txt  DEBUGGING_GUIDE.md  ISSUE_PATTERNS.md  PERFORMANCE_ANALYSIS_GUIDE.md  PROMPT.md  README.md  README.txt  build_all.bat  clean.bat  configure.bat  memory_access.html  run.bat  run_all.bat  vs_extensions.md
10-debugging-performance/assets/: debugging_performance.puml
10-debugging-performance/include/: cli_parser.h  debug_utils.h  memory_access_visualizer.h  profiler.h
10-debugging-performance/scripts/: check_prerequisites.bat  run_diagnostics.bat  run_issue_examples.bat  setup_debugging_tools.bat
10-debugging-performance/src/: analysis_tools.cpp  excessive_synchronization.cpp  false_sharing.cpp  load_imbalance.cpp  memory_issues.cpp  race_conditions.cpp
10-debugging-performance/src/diagnostics/: custom_profiler.cpp  intel_vtune.cpp  vs_diagnostics.cpp
10-debugging-performance/src/fixes/: excessive_synchronization_fixed.cpp  false_sharing_fixed.cpp  load_imbalance_fixed.cpp  memory_issues_fixed.cpp  race_conditions_fixed.cpp
10-debugging-performance/src/visualization/: memory_access_visualizer.cpp  thread_timeline_visualizer.cpp
10-debugging-performance/utils/: cli_parser.cpp  debug_utils.cpp  memory_access_visualizer.cpp  profiler.cpp
assets/: repository_structure.puml
git-scripts/: download_plantuml.bat  run_plantuml_latex.bat  run_plantuml_pdf.bat  run_plantuml_png.bat  run_plantuml_svg.bat  test_plantuml.bat  update-submodules.bat
reports/: pattern_recognition.html  performance_regression.html  race_detection.html  thread_timeline_Release.html
